--- a/index.html
+++ b/index.html
@@ -5,28 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DOM</title>
     <script defer src="./assets/js/index.js"></script>
+    <link rel="stylesheet" href="./assets/css/reset.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
   </head>
   <body>
-    <h1>Lorem, ipsum dolor.</h1>
-    <img src="" alt="" class="mainImg" />
-    <section>
-      <h2>Lorem, ipsum dolor.</h2>
-      <img src="" alt="" class="sectionImage" />
-      <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel,
-        consequatur!
-      </p>
-      <p>Ipsa cum soluta ipsum quos reprehenderit, commodi a quo ab.</p>
-    </section>
-    <section>
-      <h2>Voluptatibus, officia nemo!</h2>
-      <img src="" alt="" class="sectionImage" />
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus, ea!</p>
-      <p>
-        Saepe fugit laboriosam incidunt voluptatum quia esse earum quod
-        suscipit.
-      </p>
-    </section>
-    <button>Change text</button>
-   </body>
+    <div class="sliderWrapper">
+      <img
+        src="https://images.unsplash.com/photo-1487525219605-eadb39ae229c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8NHx8ZGVlcCUyMGZvcmVzdHxlbnwwfHwwfHx8MA%3D%3D&w=1000&q=80"
+        alt="nature"
+      />
+      <button class="navBtn prevBtn"><</button>
+      <button class="navBtn nextBtn">></button>
+    </div>
+  </body>
 </html>
